# borneVocaleMqtt

./: .gitignore  CMakeLists.txt  README.md  bouton_Led.cpp  build.sh  conanfile.py  install.sh  launch.sh  node-red.service  project.vdk  redirectAudio.sh
config/: applications.json  asr_manager.json  asr_paths.json  audio-tts.json  audioconfig.json  logger.json  main.json  recognizer.json  vsdk.json
data/ctx/: asreng-US.fcf  asrfra-FR.bnf  asrfra-FR.fcf
data/liquid/: liquid_config.json
src/: main.cpp  main.h
src/portaudio/: PaAudioInputAdapter.cpp  PaAudioInputAdapter.hpp  PaAudioInputAdapterFactory.cpp  PaAudioInputAdapterFactory.hpp  Utils.hpp
